Fix newsletter icon height on IE

--- a/src/components/newsletters/newsletter.css
+++ b/src/components/newsletters/newsletter.css
@@ -19,7 +19,7 @@
 
 .newsletter-icon .anticon svg {
   width: 20px !important;
-  height: auto !important;
+  height: 20px !important;
 }
 
 .newsletter-info {
